--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-23  Gary V. Vaughan  <gvaughan@eris.qinetiq.com>
+
+	* ltmain.in: Add missing --help doc for --preserve-dup-deps.
+
 2004-02-22  Gary V. Vaughan  <gary@gnu.org>
 
 	* Makefile.maint (web-manual): Generate the web manual carefully
