--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-02  Patrick Welche  <prlw1@newn.cam.ac.uk>
+
+	* doc/libtool.texi (LT_INIT): Dumb typos fixed.
+
 2004-02-23  Gary V. Vaughan  <gary@gnu.org>
 
 	* ltmain.in <install mode>: Add missing --help doc for
