--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-02  Gary V. Vaughan  <gary@gnu.org>
+
+	* bootstrap: Prune out my arch mirror dir before running
+	amok through the tree with 'rm -rf'!
+
 2004-03-02  Patrick Welche  <prlw1@newn.cam.ac.uk>
 
 	* doc/libtool.texi (LT_INIT): Dumb typos fixed.
