--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-05  Gary V. Vaughan  <gary@gnu.org>
+
+	* doc/libtool.texi: This manual has not been maintained properly
+	for a number of years.  Much of what it said was outdated, or
+	plain wrong with reference to modern autotools.  This change
+	represents a first pass edit to clean up the obviously wrong.
+
 2004-03-02  Gary V. Vaughan  <gary@gnu.org>
 
 	* bootstrap: Prune out my arch mirror dir before running
