--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-05  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtoolize.in: Remove --ltdl-tar.  It doesn't work with the
+	current implementation, and seems more or less pointless.
+	* doc/libtool.texi (Invoking libtoolize): Updated.
+	* NEWS: Updated.
+
 	* doc/libtool.texi: This manual has not been maintained properly
 	for a number of years.  Much of what it said was outdated, or
 	plain wrong with reference to modern autotools.  This change
