--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-05  David Edelsohn  <edelsohn@gnu.org>
+
+	* m4/libtool.m4: Disable building static libraries if building
+	shared libraries on AIX 5L.
+
 2004-03-05  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.in: Remove --ltdl-tar.  It doesn't work with the
