--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-05  David Edelsohn  <edelsohn@gnu.org>
+
+	* libtool.m4: Disable building static libraries if building
+	shared libraries on AIX 5L.
+
 2004-03-02  Gary V. Vaughan  <gary@gnu.org>
 
 	* bootstrap: Prune out my arch mirror dir before running
