--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-13  Gary V. Vaughan  <gary@gnu.org>
+
+	* doc/libtool.texi (Using Automake): Cite correct Automake version
+	for -dlopen quoting.
+	(Autoconf and LTLIBOBJS): Cite correct Autoconf	versions
+	throughout.
+	(Distributing libltdl): Use AM_CPPFLAGS; INCLUDES is deprecated.
+	From Alexandre Duret-Lutz  <adl@src.lip6.fr>
+
 2004-03-05  David Edelsohn  <edelsohn@gnu.org>
 
 	* m4/libtool.m4: Disable building static libraries if building
