--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-14  Scott James Remnant  <scott@netsplit.com>
+
+	* m4/ltmain.in: Only check precious_files_regex if it is not empty.
+
 2004-03-05  David Edelsohn  <edelsohn@gnu.org>
 
 	* libtool.m4: Disable building static libraries if building
