--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2004-03-14  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in: Use $EGREP, $GREP is not set.
+	* ltmain.in (link_all_deplibs,darwin): Link libraries in the
+	correct order. Bug from Zachary Pincus <zpincus@stanford.edu>.
 
 2004-03-14  Scott James Remnant  <scott@netsplit.com>
 
