--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-14  Michael Pruett  <michael@68k.org>
+
+	* m4/libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS0 [irix]: Define
+	archive_expsym_cmds so that --export-symbols will work.
+
 2004-03-11  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in (link_all_deplibs,darwin): Link libraries in the
