--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4: Remove newlines from lt_ld_extra, so
+	variable can safely be stored in config.cache.
+
 2004-03-14  Michael Pruett  <michael@68k.org>
 
 	* m4/libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS0 [irix]: Define
