--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,70 @@
+2004-03-21  Scott James Remnant  <scott@netsplit.com>
+
+	Further sweeping changes to the user interface to libtool from
+	`configure.ac' to allow users to better control the list of
+	supported languages.  Three LT_INIT options 'no-lang', 'all-lang'
+	and 'auto-lang' (the default) control the initial list and others
+	may be added with LT_LANG.
+
+	* m4/libtool.m4 (_LT_CONFIG): Renamed AC_LIBTOOL_CONFIG to _LT_CONFIG
+	which is more consistent with our own namespace and gets us further out
+	of Autoconf's.
+	(_LT_LIBTOOL_TAGS): Output available_tags variable based entirely
+	on the value of _LT_TAGS.
+	(_LT_COPYING): Call _LT_LIBTOOL_TAGS to output available tags,
+	always append tag configuration if the tag is available.
+	(LT_LANG): New macro to enable support for a language that accepts
+	tag names (eg. "CXX") or human language names (eg. "C++").
+	(_LT_LANG): Internal support macro for above that appends the
+	tag to _LT_TAGS and calls the appropriate config macro.
+	(LT_INIT): Ensure that LT_LANG is not called before LT_INIT.
+	(AC_LIBTOOL_TAGS): Removed, call LT_LANG for each language now.
+	(_LT_AC_TAG_CHECK): Removed, _LT_LANG handles duplicate calls.
+	(_LT_LANG_DEFAULT_CONFIG): Macro to set initial language support
+	based on options passed to LT_INIT.
+	(_LT_SETUP): Call _LT_LANG_DEFAULT_CONFIG.
+	(_LT_AC_TAG_CONFIG): Removed, handled by _LT_LANG_DEFAULT_CONFIG.
+	(_LT_AC_LANG_CXX, _LT_AC_LANG_F77, _LT_AC_LANG_GCJ): Removed,
+	automatic language support inclusion now handled by
+	_LT_LANG_DEFAULT_CONFIG.
+	(AC_LIBTOOL_CXX): Obsolete macro, update to LT_LANG(C++).
+	(AC_LIBTOOL_F77): Obsolete macro, update to LT_LANG(Fortran 77).
+	(AC_LIBTOOL_GCJ): Obsolete macro, update to LT_LANG(Java).
+	(AC_LIBTOOL_LANG_C_CONFIG_: Removed.
+	(_LT_AC_LANG_C_CONFIG): Renamed to _LT_LANG_C_CONFIG, call
+	_LT_CONFIG instead of AC_LIBTOOL_CONFIG.
+	(_LT_SETUP): Replace call to AC_LIBTOOL_LANG_C_CONFIG with call to
+	new _LT_LANG_C_CONFIG macro.
+	(AC_LIBTOOL_LANG_CXX_CONFIG): Removed.
+	(_LT_AC_LANG_CXX_CONFIG): Renamed to _LT_LANG_CXX_CONFIG, call
+	_LT_CONFIG instead of AC_LIBTOOL_CONFIG.
+	(AC_LIBTOOL_LANG_F77_CONFIG): Removed.
+	(_LT_AC_LANG_F77_CONFIG): Renamed to _LT_LANG_F77_CONFIG, call
+	_LT_CONFIG instead of AC_LIBTOOL_CONFIG.
+	(AC_LIBTOOL_LANG_GCJ_CONFIG): Removed.
+	(_LT_AC_LANG_GCJ_CONFIG): Renamed to _LT_LANG_GCJ_CONFIG, call
+	_LT_CONFIG instead of AC_LIBTOOL_CONFIG.
+	(AC_LIBTOOL_LANG_RC_CONFIG): Removed.
+	(_LT_AC_LANG_RC_CONFIG): Renamed to _LT_LANG_RC_CONFIG, call
+	_LT_CONFIG instead of AC_LIBTOOL_CONFIG.
+	(LT_AC_PROG_GCJ): Renamed to LT_PROG_GCJ.
+	(LT_AC_PROG_RC): Renamed to LT_PROG_RC.
+	* m4/ltoptions.m4: Define new 'no-lang', 'auto-lang' and 'all-lang'
+	options which set the default for _LT_LANG_DEFAULT_CONFIG.
+	* m4/lt~obsolete.m4: Removed AC_LIBTOOL_CONFIG, _LT_AC_LANG_C_CONFIG,
+	_LT_AC_LANG_GCJ_CONFIG, _LT_AC_LANG_RC_CONFIG; all of which are no
+	long referenced in any way.
+	* configure.ac: Enable all languages.
+	* tests/cdemo/configure.ac, tests/demo/configure,ac,
+	tests/depdemo/configure.ac, tests/f77demo/configure.ac,
+	tests/mdemo/configure.ac, tests/pdemo/configure,ac,
+	tests/tagdemo/configure.ac: Remove calls to AC_LIBTOOL_TAGS,
+	the default 'auto-lang' mode now does the right thing.
+	* doc/libtool.texi (The LT_INIT macro): Add documentation for
+	new LT_INIT options and the LT_LANG macro, replacing the old
+	documentation of AC_LIBTOOL_TAGS which is no more.
+	* NEWS: Updated.
+
 2004-03-17  Scott James Remnant  <scott@netsplit.com>
 
 	* m4/libtool.m4: Removed AC_BEFORE references to AC_LIBTOOL_SETUP
