--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1831,19 +1831,37 @@ Change the default behaviour of @command{libtool} to try to use only
 non-PIC objects.  The user may still override this default by
 specifying @samp{--without-pic} to @command{configure}.
 
+@item no-lang
+Change the default list of additional languages @command{libtool} supports
+to none, only the built-in C language support will be enabled.  Additional
+languages such as C++ will only be enabled if appropriate @code{LT_LANG}
+macros are added to your @file{configure.ac}.
+
+@item all-lang
+Change the default list of additional languages @command{libtool} supports
+to all that the host system supports.
+
+@item auto-lang
+Change the default list of additional languages @command{libtool} supports
+to be determined automatically by detecting macros such as
+@code{AC_PROG_CXX} in your @file{configure.ac}.  Additional languages can
+be added by adding appropriate @code{LT_LANG} macros to your
+@file{configure.ac}.
+
 @end itemize
 
 @end defmac
 
-@defmac AC_LIBTOOL_TAGS ([tag1 tag2 ...])
-Change the default behaviour for @code{LT_INIT} to limit
-configuration to a specified set of language tags. This is valuable in
-case libtool is embedded in a package which only uses a subset of the
-languages libtool supports. Configuring a subset of the supported
-languages results in a smaller configure script, and faster libtool
-configuration. Tag names accepted are "CXX", "F77", "GCJ", and
-"RC". Support for the C language is integral to libtool and can not be
-disabled.
+@defmac LT_LANG (@var{LANGUAGE})
+Enable @command{libtool} support for the language given if it
+has not yet already been enabled.  Languages accepted are "C++",
+"Fortran 77", "Java" and "Windows Resource"@footnote{These may also be
+referred to by their generated tag names, "CXX", "F77", "GCJ" and "RC".}.
+
+By default, the set of languages @command{libtool} will support is
+determined automatically by detected macros such as @code{AC_PROG_CXX}
+in your @file{configure.ac}.  This behaviour may be changed by passing
+either the "no-lang" or "all-lang" options to @code{LT_INIT}.
 @end defmac
 
 The tests in @code{LT_INIT} also recognize the following
