--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-24  Scott James Remnant  <scott@netsplit.com>
+
+	* ltmain.in <prog linkmode>: Always add -L options to
+	$newlib_search_path instead of just in scan mode to ensure that
+	non-libtool libraries in user-specified directories can be found.
+
 2004-03-22  Scott James Remnant  <scott@netsplit.com>
 
 	* m4/libtool.m4 (_LT_CONFIG): Remove unneeded else condition
