--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-24  Scott James Remnant  <scott@netsplit.com>
+
+	* libltdl/ltdl.c (sys_dl_open): Don't load libraries with global
+	symbol resolution.
+	* NEWS: Updated.
+
 2004-03-24  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4: Add new variable, inherit_rpath, if the
