--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-03-30  Gary V. Vaughan  <gary@gnu.org>
 
+	* m4/libtool.m4: Use LT_INIT as #serial tag.
+	* libtoolize.in: Grok LT_INIT!  Pass A[CM]_PROG_LIBTOOL to...
+	(func_serial_update): ...here, we now take an additional parameter
+	containing another regex to match ancient serialed files.
+	(func_serial): Accept AC_DEFUN_ONCE of the #serial tag...
+	(func_grep): ...which requires egrep...
+	(EGREP): ...substituted by config.status.
+	(func_scan_files): Set seen_libtool if LT_INIT goes by.
+
 	* Makefile.am (pkgmacro_DATA): Install ltoptions.m4.
 
 	* libltdl/Makefile.am (AM_CPPFLAGS): Also check $top_builddir for
